--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: php-app
-  namespace: argocd
+  namespace: hello-world
 spec:
   replicas: 1
   selector:
@@ -45,7 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: php-app-service
-  namespace: argocd
+  namespace: hello-world
 spec:
   type: ClusterIP
   ports:
