--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,12 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: php-app-ingress
-  namespace: argocd
+  namespace: hello-world
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: dockerprism.local
+  - host: helloworld.fashionxlab.com
     http:
       paths:
       - path: /
