--- a/k8s/php-app-hpa.yaml
+++ b/k8s/php-app-hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: php-app-hpa
-  namespace: argocd
+  namespace: hello-world
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -16,4 +16,4 @@ spec:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: 1
+          averageUtilization: 50
