--- a/k8s/php-logs-pvc.yaml
+++ b/k8s/php-logs-pvc.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: php-logs-pvc
-  namespace: argocd
+  name: pfs-builder-logs-pvc
+  namespace: hello-world
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: "10Gi"
+      storage: "20Gi"
+  storageClassName: alicloud-disk-ssd
