--- a/etc/apache/httpd.conf
+++ b/etc/apache/httpd.conf
@@ -47,6 +47,59 @@ LoadModule logio_module modules/mod_logio.so
     <Directory "/var/www/certbot/.well-known/acme-challenge/">
         Require all granted
     </Directory>
+ # Taille maximale des requêtes
+    LimitRequestBody 104857600
+
+    <Directory /var/www/public>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+    </Directory>
+
+    # Restrictions pour /telescope
+    <Location /telescope>
+        AuthType Basic
+        AuthName "Restricted Access"
+        AuthUserFile /etc/httpd/.htpasswd
+        Require valid-user
+    </Location>
+
+    # Restrictions pour /api/v1/docs
+    <Location /api/v1/docs>
+        AuthType Basic
+        AuthName "Restricted Access"
+        AuthUserFile /etc/httpd/.docpasswd
+        Require valid-user
+    </Location>
+
+    # Gestion des fichiers PHP via PHP-FPM
+    #<FilesMatch \.php$>
+        #SetHandler "proxy:fcgi://php-builder-${WEB_ID}:9000"
+    #</FilesMatch>
+
+# Redirect to local php-fpm if mod_php (5, 7 or 8) is not available
+<IfModule !mod_php5.c>
+  <IfModule !mod_php7.c>
+    <IfModule !mod_php.c>
+      # Enable http authorization headers
+      SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+
+      <FilesMatch \.(php|phar)$>
+          SetHandler "proxy:unix:/run/php-fpm/www.sock|fcgi://localhost"
+      </FilesMatch>
+    </IfModule>
+  </IfModule>
+</IfModule>
+
+
+
+    # Réécritures pour rediriger vers index.php si le fichier n'existe pas
+    <IfModule mod_rewrite.c>
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule ^ /index.php [QSA,L]
+    </IfModule>
 </VirtualHost>
 
 <VirtualHost *:443>
