--- a/k8s/apps/hello-world/php-app-hpa.yaml
+++ b/k8s/apps/hello-world/php-app-hpa.yaml
@@ -1,15 +1,15 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: php-app-hpa
+  name: hello-world-hpa
   namespace: hello-world
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: php-app
+    name: hello-world
   minReplicas: 1
-  maxReplicas: 20
+  maxReplicas: 3
   metrics:
     - type: Resource
       resource:
