--- a/k8s/apps/hello-world/php-logs-pvc.yaml
+++ b/k8s/apps/hello-world/php-logs-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: php-logs-pvc
+  name: hello-world-logs-pvc
   namespace: hello-world
 spec:
   accessModes:
