--- a/k8s/apps/hello-world/deployment.yaml
+++ b/k8s/apps/hello-world/deployment.yaml
@@ -22,11 +22,11 @@ spec:
             - containerPort: 443
           resources:
              requests:
-               memory: "2Gi"
-               cpu: "1"
+               memory: "512Mi"
+               cpu: "400m"
              limits:
-               memory: "4Gi"
-               cpu: "2"
+               memory: "1Gi"
+               cpu: "800m"
       volumes:
         - name: certs
           secret:
